--- a/src/ZectranetBundle/Resources/views/office.html.twig
+++ b/src/ZectranetBundle/Resources/views/office.html.twig
@@ -156,12 +156,12 @@
                 <h4 class="text-info text-center vertical-center">Posts will be displayed here</h4>
             {% endif %}
             <ul class="chat">
-                <li ng-repeat="post in posts" class="clearfix" ng-class="{'right': {{ app.user.id }} == post.user.id, 'left': {{ app.user.id }} != post.user.id }">
-                        <span class="chat-img"
-                              ng-class="{'pull-right': {{ app.user.id }} == post.user.id, 'pull-left': {{ app.user.id }} != post.user.id }"
-                              ng-init="avatar = generateAsset('{{ asset('') }}', 'documents/' + post.user.avatar)">
+                <li ng-repeat="post in posts" highlight class="clearfix" ng-class="{'right': {{ app.user.id }} == post.user.id, 'left': {{ app.user.id }} != post.user.id }">
+                    <span class="chat-img"
+                        ng-class="{'pull-right': {{ app.user.id }} == post.user.id, 'pull-left': {{ app.user.id }} != post.user.id }"
+                        ng-init="avatar = generateAsset('{{ asset('') }}', 'documents/' + post.user.avatar)">
                             <img src="#" ng-src="[[avatar]]" alt="User Avatar" class="img-circle" style="width: 50px; height: 50px;"/>
-                        </span>
+                    </span>
                     <div class="chat-body clearfix">
                         <div class="header" style="height: 28px;">
                             <strong class="primary-font"
@@ -176,9 +176,7 @@
                             </small>
                         </div>
                         <pre style="white-space: pre-line;">
-                            <span>
-                                [[ post.message ]]
-                            </span>
+                            <span ng-bind-html="post.message"></span>
                         </pre>
                     </div>
                 </li>
@@ -247,7 +245,7 @@
             setTimeout(function() {
                 img = $('.img-screenshot');
                 return img;
-            },100);
+            }, 100);
 
             if($('.img-screenshot').length == 1) {
                 $('#slide-down-menu-screenshots').fadeOut(500);
