--- a/src/ZectranetBundle/Resources/views/settings.html.twig
+++ b/src/ZectranetBundle/Resources/views/settings.html.twig
@@ -78,6 +78,7 @@
                             Disable all notifications on email
                         </div>
 
+                        {#
                         <div class="form-group">
                             <input type="checkbox" name="msgEmailMessageOffice" {% if (app.user.userSettings.msgEmailMessageOffice) %}checked{% endif %}>
                             New message in office
@@ -96,7 +97,7 @@
                         <div class="form-group">
                             <input type="checkbox" name="msgEmailMessageTask" {% if (app.user.userSettings.msgEmailMessageTask) %}checked{% endif %}>
                             New message in task
-                        </div>
+                        </div>#}
 
 
                         <div class="form-group">
