--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -96,12 +96,104 @@
 
             <div class="col-md-12">
                 <div class="panel panel-default list-group">
+
+                    <div class="list-group-item active">
+                        <i class="fa fa-tasks"></i>
+                        <span>Filter:</span>
+                    </div>
+                    <div class="panel-body">
+
+                        <div class="btn-group">
+
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                    Priority <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li><a style="cursor: pointer;">Sort A-Z</a></li>
+                                    <li><a style="cursor: pointer;">Sort Z-A</a></li>
+                                    <li class="divider"></li>
+                                    <li><a style="cursor: pointer;">low</a></li>
+                                    <li><a style="cursor: pointer;">medium</a></li>
+                                    <li><a style="cursor: pointer;">high</a></li>
+                                </ul>
+                            </div>
+
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                    Status <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something else here</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="#">Separated link</a></li>
+                                </ul>
+                            </div>
+
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                    Progress <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something else here</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="#">Separated link</a></li>
+                                </ul>
+                            </div>
+
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                    Owner <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something else here</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="#">Separated link</a></li>
+                                </ul>
+                            </div>
+
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                    Assigned <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something else here</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="#">Separated link</a></li>
+                                </ul>
+                            </div>
+
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                    Sprint <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something else here</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="#">Separated link</a></li>
+                                </ul>
+                            </div>
+
+                        </div>
+
+                    </div>
+
                     <div class="list-group-item active">
                         <i class="fa fa-tasks"></i>
                         <span>Tasks</span>
                     </div>
-                    <div cg-busy="promise" class="panel-body">
 
+                    <div cg-busy="promise" class="panel-body">
                         <!-- Begin of Task Nav Tabs -->
                         <ul id="task-view-tabs" class="nav nav-tabs" role="tablist">
                             <li data-toggle="tooltip" data-placement="top" title="Table view" role="presentation" class="active">
