--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -116,21 +116,48 @@
                         </a>
 
                         <ul class="dropdown-menu dropdown-tasks noclose">
-                            <li>
-                                <a href="#">
-                                    <div>
-                                        <p>
-                                            <strong>Task 1</strong>
-                                            <span class="pull-right text-muted">40% Complete</span>
-                                        </p>
-                                        <div class="progress progress-striped active">
-                                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                                                <span class="sr-only">40% Complete (success)</span>
+                            <li class="text-center" style="margin-top: 5px;"><b>TASKS  <span style="color: violet;">IN-PROGRESS </span></b></li>
+
+                            {% for task in app.user.assignedTasks | slice(0, 1) %}
+                                <li class="divider"></li>
+
+                                <li>
+                                    <a href="#">
+                                        <div>
+                                            <p>
+                                                <span style="display: inline-block; width: 70%; word-wrap: break-word;"><b>{{ task.name  }}</b></span>
+                                                <span class="pull-right text-muted" style="display: inline-block; width: 28%; text-align: right;">{{ task.progress }}% Complete</span>
+                                            </p>
+                                            <div class="progress progress-striped active">
+                                                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{ task.progress }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ task.progress }}%">
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                </a>
-                            </li>
+                                    </a>
+                                </li>
+                            {% endfor %}
+
+
+                            {% for task in app.user.ownedTasks | slice(0, 2) %}
+                                <li class="divider"></li>
+
+                                <li>
+                                    <a href="#">
+                                        <div>
+                                            <p>
+                                                <span style="display: inline-block; width: 70%; word-wrap: break-word;"><b>{{ task.name  }}</b></span>
+                                                <span class="pull-right text-muted" style="display: inline-block; width: 28%; text-align: right;">{{ task.progress }}% Complete</span>
+                                            </p>
+                                            <div class="progress progress-striped active">
+                                                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{ task.progress }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ task.progress }}%">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+
+                            {% endfor %}
+
 
                             <li class="divider"></li>
 
@@ -201,12 +228,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <div class="row">
-                                            <div class="col-xs-12">
-                                                <div style="padding: 0 15px;">
-                                                    <input type="submit" class="btn btn-primary form-control" value="Save">
-                                                </div>
+                                    <div class="row" style="margin-bottom: 5px;">
+                                        <div class="col-xs-12">
+                                            <div style="padding: 0 15px;">
+                                                <input type="submit" class="btn btn-primary form-control" value="Save">
                                             </div>
                                         </div>
                                     </div>
