--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -123,7 +123,7 @@
                                 <li class="divider"></li>
 
                                 <li>
-                                    <a href="#">
+                                    <a href="{{ path('zectranet_task_show', {task_id: task.id}) }}">
                                         <div>
                                             <p>
                                                 <span style="display: inline-block; width: 70%; word-wrap: break-word;"><b>{{ task.name  }}</b></span>
@@ -143,7 +143,7 @@
                                 <li class="divider"></li>
 
                                 <li>
-                                    <a href="#">
+                                    <a href="{{ path('zectranet_task_show', {task_id: task.id}) }}">
                                         <div>
                                             <p>
                                                 <span style="display: inline-block; width: 70%; word-wrap: break-word;"><b>{{ task.name  }}</b></span>
